fixed horizontal scroll on bug board

--- a/src/components/BugBoard/BugGroup.styles.scss
+++ b/src/components/BugBoard/BugGroup.styles.scss
@@ -1,5 +1,6 @@
 $phone: "(min-width: 320px) and (max-width: 768px)";
 
+
 .bug-group-container {
   width: 100%;
  
@@ -15,15 +16,17 @@ $phone: "(min-width: 320px) and (max-width: 768px)";
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 3%;
+  margin-right: 3%;
   
  
 
   @media #{$phone} {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    max-width: 100%;
     margin-top: 20%;
+    margin-right: 5%;
+    overflow: hidden;
   }
 }
 
